; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/core/extr_util.c_check_path.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/core/extr_util.c_check_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expected_t = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64, i32)* @check_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_path(i8* %0, i8* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.expected_t**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.expected_t**
  store %struct.expected_t** %11, %struct.expected_t*** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = load %struct.expected_t**, %struct.expected_t*** %9, align 8
  %15 = load %struct.expected_t*, %struct.expected_t** %14, align 8
  %16 = getelementptr inbounds %struct.expected_t, %struct.expected_t* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.expected_t**, %struct.expected_t*** %9, align 8
  %19 = load %struct.expected_t*, %struct.expected_t** %18, align 8
  %20 = getelementptr inbounds %struct.expected_t, %struct.expected_t* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @strlen(i32 %21)
  %23 = call i32 @h2o_memis(i8* %12, i64 %13, i32 %17, i32 %22)
  %24 = call i32 @ok(i32 %23)
  %25 = load i32, i32* %8, align 4
  %26 = load %struct.expected_t**, %struct.expected_t*** %9, align 8
  %27 = load %struct.expected_t*, %struct.expected_t** %26, align 8
  %28 = getelementptr inbounds %struct.expected_t, %struct.expected_t* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp eq i32 %25, %29
  %31 = zext i1 %30 to i32
  %32 = call i32 @ok(i32 %31)
  %33 = load %struct.expected_t**, %struct.expected_t*** %9, align 8
  %34 = load %struct.expected_t*, %struct.expected_t** %33, align 8
  %35 = getelementptr inbounds %struct.expected_t, %struct.expected_t* %34, i32 1
  store %struct.expected_t* %35, %struct.expected_t** %33, align 8
  ret void
}

declare dso_local i32 @ok(i32) #1

declare dso_local i32 @h2o_memis(i8*, i64, i32, i32) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
